--- a/style.css
+++ b/style.css
@@ -25,11 +25,18 @@ body {
 
 .quote-container {
     background-color: #e5e7eb;
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
     padding: 0 100px;
 }
 
 .call-to-action {
     padding: 0 100px;
+}
+
+.call-to-action-bar {
+    background-color: #3882f6;
 }
 
 .footer {
@@ -41,6 +48,28 @@ body {
 }
 
 #logo {
-    size: 24px;
+    font-size: 24px;
     color: #f9faf8;
+}
+
+#info-header {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+.hero-main {
+    font-size: 48px;
+    font-weight: 900;
+    color: #f9faf8;
+}
+
+.hero-secondary {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+button {
+    background-color: #3882f6;
+    color: white;
 }
