--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
     display: flex;
     background-color: #1F2937;
     color: white;
-    padding: 0 100px;
+    padding: 10px 100px;
+    gap: 20px;
 }
 
 .herobar{
@@ -50,6 +51,7 @@ body {
 #logo {
     font-size: 24px;
     color: #f9faf8;
+    margin-right: auto;
 }
 
 #info-header {
