--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@ button {
    width: 100px;
    height: 100px;
    object-fit: cover;
+   border: 2px solid #3882f6;
+   border-radius: 10px;
 }
 
 .quote-container {
