--- a/style.css
+++ b/style.css
@@ -32,7 +32,10 @@ button {
 
 .content-container {
     display: flex;
-    padding: 0 100px;
+    padding: 20px 100px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 40px;
 }
 
 .small-img {
@@ -41,6 +44,11 @@ button {
    object-fit: cover;
    border: 2px solid #3882f6;
    border-radius: 10px;
+}
+
+.small-img-text {
+    width: 100px;
+    text-align: center;
 }
 
 .quote-container {
@@ -76,9 +84,14 @@ button {
 }
 
 #info-header {
+    display: flex;
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 .hero-main {
