--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ body {
 
 button {
     border-radius: 5px;
-    border: #3882f6;
-    width: 80px;
-    height: 20px;
+    border: 2px solid #3882f6;
+    width: 85px;
+    height: 25px;
 }
 
 .navbar {
@@ -87,14 +87,23 @@ cite {
     display: flex;
     flex-direction: column;
     margin-left: 50px;
+    flex-grow: 3;
 }
 
 #call-to-action-title {
     font-weight: 900;
 }
 
-.call-to-action-button {
-    border: #e5e7eb;
+.action-button {
+    border: 2px solid white;
+}
+
+.button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 2;
+    margin-right: 50px;
 }
 
 .footer {
